Added html for header and footer and top part of main

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Unplugged</title>
+  <title>Unplugged Retreat</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -26,8 +26,8 @@
 
   <!-- Add your site or application content here -->
  <header>
-  <div>
-    <a href="#"><img src="" alt="unplugged logo"></a>
+  <div class="content-wrapper">
+    <a href="#"><img src="img/unpluggedlogo.png" alt="unplugged logo"></a>
     <div></div>
     <nav>
       <ul>
@@ -38,10 +38,41 @@
   </div>
  </header>
  <main>
-  <section></section>
-  <aside></aside>
+  <section class="hero-area">
+    <h1>Retreat from the desk, return refreshed.</h1>
+  </section>
+  <aside>
+    <h3>Want to join the next retreat?</h3>
+    <p>Find out when we are holding our next retreat and how your company or team can sign up!</p>
+    <h3>Find out more</h3>
+    <div>
+      <input type="text" name="name" value="name@email.com">
+      <input type="button" value="Download Itinerary">
+    </div>
+  </aside>
  </main>
- <footer></footer>
+ <footer>
+  <div class="content-wrapper">
+    <div class="footer-contact">
+      <div class="contact">
+        <address>
+          <h4>Contact</h4>
+          <a href="tel:+5555555555">555-555-5555</a><br>
+          <a href="mailto:hello@unplugged.com">hello@unplugged.com</a>
+        </address>
+      </div>
+      <div class="social">
+        <h4>Social</h4>
+        <p><a href="https://www.facebook.com/yoursite" target="_blank" rel="noopener"></a></p>
+        <p><a href="https://www.twitter.com/yoursite" target="_blank" rel="noopener"></a></p>
+        <p><a href="https://www.instagram.com/yoursite" target="_blank" rel="noopener"></a></p>
+      </div>
+    </div>
+    <div class="copyright">
+      <p>Copyright 202X | Unplugged</p>
+    </div>
+  </div>
+ </footer>
 
 
 
